--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-color: #3498db; /* Blue color */
+    background-color: #db34b7; /* Blue color */
     color: #fff; /* White text */
     padding: 20px;
 }
@@ -19,9 +19,14 @@ article {
     margin-bottom: 40px;
 }
 
+.small-image {
+    width: 70%; /* You can adjust this percentage to make the image smaller or larger */
+    height: auto; /* This maintains the aspect ratio of the image */
+}
+
 footer {
-    background-color: #333; /* Dark grey color */
-    color: #fff; /* White text */
+    background-color: #5e36df; /* green color */
+    color: hsla(120, 6%, 93%, 0.936); /* White text */
     text-align: center;
     padding: 10px;
 }
